# ml_strategy_marcelino

./: CMakeLists.txt  package.xml
include/ml_strategy/: globals.h  helper.h  linear_algebra.h  rk4.h  structs.h  team_strategy_class.h  threads.h  trapezoidal.h
launch/: ml_wizard_strategy.launch  play_against_marcelino.launch
src/: clone_all_executables.sh  helper.cpp  linear_algebra.cpp  ml_strategy.cpp  rk4.cpp  team_strategy_class.cpp  threads.cpp
